--- a/templates/index.html
+++ b/templates/index.html
@@ -327,7 +327,7 @@
 
         <div id="chatbox">
           <p class="botText d-inline">
-              <span style="font-size:0.8rem"><i class="fas fa-robot"></i>&nbsp;I'm Flasky for your help!</span>
+              <span style="font-size:0.8rem"><i class="fas fa-robot"></i>&nbsp;I'm SAMI for your help!</span>
           </p>
           <!-- =================== DISPLAYING LOGIN REGISTRATION LINK BASED ON USER LOGGED IN OR NOT =================== -->
           {% with m=session.get("user_id")  %}
