--- a/static/common.css
+++ b/static/common.css
@@ -7,7 +7,6 @@
 ul{
   list-style-type: none;
 }
-
 /* =================== HEADER =================== */
 .header-box{
   position: relative;
@@ -29,10 +28,56 @@ ul{
 .header-box>div>h3{
   margin: 2px 0;
 }
-
+.header-box>a>img{
+  width: 70px;
+}
+header{
+  width: 90%;
+  margin: auto;
+}
+@media screen and (max-width: 800px) {
+  .header-box>a>img{
+    width: 60px;
+  }
+}
+@media screen and (max-width: 800px) and (min-width: 705px) {
+  .header-box>a{
+    left: -10px;
+  }
+  .header-box>div.header-title{
+    left: 60px;
+  }
+  .header-box>div>h3{
+    font-size: 17px;
+    font-weight: 600;
+  }
+  .header-box>div.header-contact{
+    right: -10px;
+  }
+}
+@media screen and (max-width: 705px) and (min-width: 550px) {
+  .header-box>div>h3{
+    font-size: 15px;
+    font-weight: 600;
+  }
+  .header-box>a{
+    left: -15px;
+  }
+  .header-box>div.header-title{
+    left: 50px;
+  }
+  .header-box>div.header-contact{
+    right: -25px;
+  }
+  .header-box>div.header-contact>b{
+    font-size: 10px;
+  }
+}
 /* =================== NAVIGATION =================== */
-.navbar-nav{
-  margin-left: 100px;
+@media screen and (min-width: 992px) {
+  .navbar-nav{
+    margin-left: 100px;
+  }
 }
 .navbar-nav>li>a:hover{
   color: gray!important;
