--- a/templates/index.html
+++ b/templates/index.html
@@ -144,12 +144,12 @@
       <div class="row w-75">
         <div class="col-3 border bg-black text-center rounded py-3">
           <i class=" fas fa-university fa-4x"></i>
-          <h1 class="text-white">500+</h1>
-          <h4 class="m-0 text-white">Founded</h4>
+          <h1 class="text-white">10+</h1>
+          <h4 class="m-0 text-white">Buildings</h4>
         </div>
         <div class="col-3 border bg-black text-center rounded py-3">
           <i class=" fa fa-user fa-4x"></i>
-          <h1 class="text-white">500+</h1>
+          <h1 class="text-white">7000+</h1>
           <h4 class="m-0 text-white">Student</h4>
         </div>
         <div class="col-3 border bg-black text-center rounded py-3">
@@ -159,7 +159,7 @@
         </div>
         <div class="col-3 border bg-black text-center rounded py-3">
           <i class=" fa fa-book fa-4x"></i>
-          <h1 class="text-white">500+</h1>
+          <h1 class="text-white">30+</h1>
           <h4 class="m-0 text-white">Departments</h4>
         </div>
       </div>
@@ -173,8 +173,8 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <h2 class="text-uppercase">About NSTU</h2>
-            <p class="text-justify text-secondary">Indian Institute of Technology Delhi is one of the Twenty Three IITs created to be Centres of Excellence for training, research and development in science, engineering and technology in India. Established as College of Engineering in 1961, the Institute was later declared as an Institution of...</p>
-            <button type="button" class="btn btn-dark">Reade More</button>
+            <p class="text-justify text-secondary">The creation of a band of skilled manpower equipped with latest knowledge of science and technology is a must to achieve a prestigious position in this modern world. As a part of ensuring quality education, with immense expectations of the southern coastal inhabitants of Bangladesh, a new university named Noakhali Science and Technology University (abbreviated as NSTU) was established on 15 July 2001...</p>
+            <button type="button" class="btn btn-dark">Read More</button>
           </div>
           <div class="col-12 col-md-6 video-container">
             <div class="embed-responsive embed-responsive-16by9">
@@ -191,8 +191,8 @@
           <div class="col-12 col-sm-7 vc-text-container">
             <h2 class="text-uppercase">VC's Corner</h2>
             <b><small>Prof. Dr. Md. Didar-Ul-Alam</small></b>
-            <p class="text-justify text-secondary">Prof. Rangan Banerjee has taken over the charge as Director, Indian Institute of Technology Delhi (IIT Delhi) with effect from the forenoon of 15th February, 2022 Lorem ipsum dolor sit amet.</p>
-            <button type="button" class="btn btn-dark">Reade More</button>
+            <p class="text-justify text-secondary">It's a great pleasure to me to welcome you to Noakhali Science and Technology University(NSTU).This is the 27th public university which was established on 15th July 2001, and the academic activities start on 22th June 2006, having 13 teachers, 180 students with four departments...</p>
+            <button type="button" class="btn btn-dark">Read More</button>
           </div>
         </div>
       </div>
@@ -209,50 +209,50 @@
         <div class="accordion-container">
           <details>
             <summary>
-              How do you create an accordion?
+              Where is the NSTU Central Temple located?
             </summary>
             <div>
-              Answer
+              The central temple of  NSTU is located on the way to the Bibi Khadija Hall or Monoshoroni Uddyan.
             </div>
           </details>
           <details >
             <summary>
-              How do you create an accordion?
+             How many halls are in Nstu?
             </summary>
             <div>
-              Answer
+              NSTU have total 5 halls. Two boys hall, these are: 1.Basha Shahid Abdus Salam Hall, 2.Bir Muktijuddha Abdul Malek Ukil Hall. Three girls hall, these are: 1.Hazrat Bibi Khadiza Hall, 2.Jatir Pita Bangabandhu Sheikh Mujibur Rahman Hall, 3.Bangamata Sheikh Fazilatunnessa Mujib Hall","Applications for vacant seats will be accepted from the hall subject to availability of seats.
             </div>
           </details>
           <details>
             <summary>
-              How do you create an accordion?
+              when NSTU register office get open and close?
             </summary>
             <div>
-              Answer
+              (Office Hour: 9:00 AM to 5:00 PM, Days: Sunday to Thursday, Closed weekend day: Friday and Saturday)
             </div>
           </details>
           <details>
             <summary>
-              How do you create an accordion?
+              Tell me about some facilities provided by medical center
             </summary>
             <div>
-              Answer
+              The medical center of Noakhali science and technology university (NSTU) offers free experienced general practitioner and emergency medical care services to all members (students, teachers, officers, staff, also family members of the teachers, officers, staff) of the university community. The center provides service usually 8.30 am to 5.00 pm in working days but provide emergency services 24 hours. All members of the university get medicine from the medical center at free of cost .The center also has an ambulance, for 24 hours service.
             </div>
           </details>
           <details>
             <summary>
-              How do you create an accordion?
+              How many academic buildings are in NSTU?
             </summary>
             <div>
-              Answer
+              There are 2 established Academic Buildings, namely Academic Building-1 and Academic Building-2, in this University. One academic building is now under construction, the most significant academic building in Bangladesh.
             </div>
           </details>
           <details>
             <summary>
-              How do you create an accordion?
+              What is the name of the auditorium,NSTU
             </summary>
             <div>
-              Answer
+              In NSTU there is a five storied auditorium named “Bir Muktijuddha Haji Mohammad Idris Auditorim
             </div>
           </details>
         </div> 
