Updated html and js

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,14 +110,14 @@
                 <div class="container comp-container">
                     <div class="box">
                         <select id="inp1">
-                        <option value="BScIT">BScIT</option>
-                        <option value="BScCS">BScCS</option>
-                        <option value="ME">ME</option>
+                        <option value="BScIT">BSSE</option>
+                        <option value="BScCS">CSTE</option>
+                        <option value="ME">ICE</option>
                         </select>
                         <select id="inp2">
-                        <option value="BScIT">BScIT</option>
-                        <option value="BScCS">BScCS</option>
-                        <option value="ME">ME</option>
+                        <option value="BScIT">BSSE</option>
+                        <option value="BScCS">CSTE</option>
+                        <option value="ME">ICE</option>
                         </select>
                         <button  id="but_compare">Compare</button>
                     </div>
@@ -326,7 +326,7 @@
 
         <div id="chatbox">
           <p class="botText d-inline">
-              <span style="font-size:0.8rem"><i class="fas fa-robot"></i>&nbsp;I'm Flasky for your help!</span>
+              <span style="font-size:0.8rem"><i class="fas fa-robot"></i>&nbsp;I'm Sami for your help!</span>
           </p>
           <!-- =================== DISPLAYING LOGIN REGISTRATION LINK BASED ON USER LOGGED IN OR NOT =================== -->
           {% with m=session.get("user_id")  %}
