--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,9 @@
               Tell me about some facilities provided by medical center
             </summary>
             <div>
-              The medical center of Noakhali science and technology university (NSTU) offers free experienced general practitioner and emergency medical care services to all members (students, teachers, officers, staff, also family members of the teachers, officers, staff) of the university community. The center provides service usually 8.30 am to 5.00 pm in working days but provide emergency services 24 hours. All members of the university get medicine from the medical center at free of cost .The center also has an ambulance, for 24 hours service.
+              The medical center of Noakhali science and technology university (NSTU) offers free experienced general practitioner and emergency medical care services to all members (students, teachers, officers, staff, also family members of the teachers, officers, staff) of the university community.
+              The center provides service usually 8.30 am to 5.00 pm in working days but provide emergency services 24 hours.
+              All members of the university get medicine from the medical center at free of cost .The center also has an ambulance, for 24 hours service.
             </div>
           </details>
           <details>
@@ -244,7 +246,8 @@
               How many academic buildings are in NSTU?
             </summary>
             <div>
-              There are 2 established Academic Buildings, namely Academic Building-1 and Academic Building-2, in this University. One academic building is now under construction, the most significant academic building in Bangladesh.
+              There are 2 established Academic Buildings, namely Academic Building-1 and Academic Building-2, in this University.
+              One academic building is now under construction, the most significant academic building in Bangladesh.
             </div>
           </details>
           <details>
