Input More Dataset

--- a/templates/index.html
+++ b/templates/index.html
@@ -370,12 +370,12 @@
         
                 <div class="msg-bubble">
                   <div class="msg-info">
-                    <div class="msg-info-name">Chatbot</div>
+                    <div class="msg-info-name">NSTUInformationBot</div>
                     <div class="msg-info-time">12:45</div>
                   </div>
         
                   <div class="msg-text">
-                    Hi, welcome to ChatBot! Go ahead and send me a message. 😄
+                    Hi, welcome to NSTU information chatbot ! Go ahead and send me a message for knowing . 😄
                   </div>
                 </div>
               </div>
