--- a/templates/login.html
+++ b/templates/login.html
@@ -62,7 +62,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link text-white" href="">Home</a>
+          <a class="nav-link text-white" href="/">Home</a>
         </li>
         <li class="nav-item hover-list-parent">
           <a class="nav-link text-white" href="#">Academic</a>
